test/libyul/yulSyntaxTests/objects/multiple_root_object.yul
object "A" {
  code { }
}
object "B" {
  code { }
}
// ----
// ParserError 2314: (26-32='object'): Expected end of source but got identifier
